# luna-graduate-work-repo

./: README.md
docs/: documentation.md
examples/matrices-mul/: mxm.fa  scroll.txt
examples/matrix-vector-mul/luna_src/: scroll.txt  test.fa  ucodes.cpp
examples/matrix-vector-mul/mpi_src/: matrix-vector-mul.cpp
examples/vector-scalar-mul/luna_src/: test.fa  ucodes.cpp
examples/vector-scalar-mul/mpi_src/: vector-scalar-mul.cpp
examples/vector-scalar-mul/mpi_src_2/: scalar-mul.cpp
examples/vectors-sum/luna_src/: test.fa  ucodes.cpp
examples/vectors-sum/mpi_src/: scroll.txt  vectors_sum.cpp
matrix-vector-mul/luna_src/: scroll.txt  test.fa  ucodes.cpp
matrix-vector-mul/mpi_src/: prog.cpp
task1/: task.md
task1/luna_src/: scroll.txt  test.fa
task1/mpi_src/src/luna_src/: id.cpp  mpi_comm.cpp  mpi_comm.h
vector-scalar-mul/luna_src/: test.fa
vector-scalar-mul/thread_src/: main.cpp  scroll.txt
vectors-sum/luna_src/: ucodes.cpp
vectors-sum/mpi_src/: CMakeLists.txt  scroll.txt
vectors-sum/mpi_src/src/: vectors_sum.cpp
vectors-sum/mpi_src/src/luna_src/: cf.cpp  cf.h  comm.h  common.h  config.cpp  config.h  df.cpp  df.h  id.h  main.cpp  rts.cpp  rts.h  thread_pool.cpp  thread_pool.h
